test/libhyperion/syntaxTests/immutable/external_function_pointer.hyp
contract C {
    function() external immutable f;
}
// ----
// TypeError 4888: (17-48): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
